--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -76,8 +76,8 @@ GridEnabled=False
 
 [MRU]
 MRUItem0=/Game/Maps/LEVEL_A
-MRUItem1=/Game/Maps/Title_screen
-MRUItem2=/Game/Maps/LEVEL_0
+MRUItem1=/Game/Maps/LEVEL_0
+MRUItem2=/Game/Maps/Title_screen
 
 [/Script/UnrealEd.PersonaOptions]
 ViewportBackgroundColor=(R=0.040000,G=0.040000,B=0.040000,A=0.000000)
@@ -720,7 +720,7 @@ WindowsDeviceProfileSelector.LastCompileMethod=Unknown
 LastLogListing=SourceControl
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [DetailCategories]
