--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -132,7 +132,7 @@ BaseSpecularTextureName=
 MaterialSearchLocation=Local
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Character
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 SequenceBrowser.ActiveTypeFilters=
@@ -722,7 +722,7 @@ GearVR.LastCompileMethod=Unknown
 LastLogListing=LightingResults
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Materials/M_Asphalt_01.M_Asphalt_01
 OpenAssetsAtExit=/Game/Blueprints/Testing_Character.Testing_Character
@@ -2143,13 +2143,13 @@ ContentWidget="\"Object.Appearance.ColorAndOpacity\" "
 SkeletalMesh=
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
-MaterialExpression="\"Object.DefaultValue\" "
+MaterialExpression=
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" "
 
 [RootWindow]
 ScreenPosition=X=77.000 Y=-1080.000
-WindowSize=X=1694.000 Y=1080.000
-InitiallyMaximized=False
+WindowSize=X=1704.000 Y=1090.000
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
