--- a/Saved/Config/Windows/SourceControlSettings.ini
+++ b/Saved/Config/Windows/SourceControlSettings.ini
@@ -14,6 +14,6 @@ LabelsRoot=
 ExecutableLocation=
 
 [GitSourceControl.GitSourceControlSettings]
-BinaryPath=C:\Users\zuyi\AppData\Local\GitHub\PortableGit_c2ba306e536fdf878271f7fe636a147ff37326ad\bin\git.exe
+BinaryPath=C:\Users\Allan\AppData\Local\GitHub\PortableGit_c2ba306e536fdf878271f7fe636a147ff37326ad\bin\git.exe
 
 
